--- a/01 - Python/00 - introduccion.ipynb
+++ b/01 - Python/00 - introduccion.ipynb
@@ -1,6 +1,102 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tituli 1\n",
+    "## Titulo 2\n",
+    "![alt text](https://github.com/adam-p/markdown-here/raw/master/src/common/images/icon48.png \"Logo Title Text 1\")\n",
+    "```javascript\n",
+    "var s = \"JavaScript syntax highlighting\";\n",
+    "alert(s);\n",
+    "```\n",
+    " \n",
+    "```python\n",
+    "s = \"Python syntax highlighting\"\n",
+    "print s\n",
+    "```\n",
+    " \n",
+    "```\n",
+    "No language indicated, so no syntax highlighting. \n",
+    "But let's throw in a <b>tag</b>.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola Mundo\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"Hola Mundo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola Mundo\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"Hola Mundo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'float'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'bool'>\n",
+      "<class 'bool'>\n",
+      "<class 'NoneType'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# No tipado (no se declara la variables)\n",
+    "# Variables primitivas \n",
+    "entero = 4\n",
+    "decimales = 1.1\n",
+    "string = \"Jefferson\"\n",
+    "segundo_nombre = \"Paul\" # no se debe utilizar camel case \"segundoNombre\" para el nombrado del proyecto no debe empezar con numeros\n",
+    "apellido \"Collantes\"\n",
+    "casado = False \n",
+    "estudiante = True \n",
+    "hijos = None\n",
+    "print (type (entero)) #int\n",
+    "print (type (decimales))#float\n",
+    "print (type (string))#\n",
+    "print (type (segundo_nombre))\n",
+    "print (type (casado))\n",
+    "print (type (estudiante))\n",
+    "print (type (hijos))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
