--- a/01 - Python/00 - introduccion.ipynb
+++ b/01 - Python/00 - introduccion.ipynb
@@ -88,12 +88,100 @@
     "estudiante = True \n",
     "hijos = None\n",
     "print (type (entero)) #int\n",
-    "print (type (decimales))#float\n",
-    "print (type (string))#\n",
+    "print (type (decimales)) #float\n",
+    "print (type (string)) #string\n",
     "print (type (segundo_nombre))\n",
-    "print (type (casado))\n",
-    "print (type (estudiante))\n",
-    "print (type (hijos))\n"
+    "print (type (casado)) # boolean\n",
+    "print (type (estudiante)) # boolen\n",
+    "print (type (hijos)) # non type\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Es uno de los poetas preferidos por gran parte de los lectores de poesía y también por los que no lo son habitualmente.\n",
+      "Uno de los más leídos y de los más queridos. \n",
+      "A continuación puedes leer mi selección de los mejores poemas de Mario Benedetti.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "cadena_texto = \"\"\"\n",
+    "Es uno de los poetas preferidos por gran parte de los lectores de poesía y también por los que no lo son habitualmente.\n",
+    "Uno de los más leídos y de los más queridos. \n",
+    "A continuación puedes leer mi selección de los mejores poemas de Mario Benedetti.\n",
+    "\n",
+    "\"\"\"\n",
+    "print (cadena_texto)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'decimales' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-d795a0f5f98f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mentero\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdecimales\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mentero\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhijos\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mentero\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcasado\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mentero\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnombre\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mentero\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'decimales' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "entero = decimales\n",
+    "entero = hijos \n",
+    "entero = casado\n",
+    "entero = nombre\n",
+    "print (entero)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Truty\n",
+      "Falsy\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Condiciones \n",
+    "# Truty - Flasy \n",
+    "tuplas = (1,2,3) #Arreglos que no se pueden modificar\n",
+    "listas = [4,5,6] #arreglo que se pueden modoficar \n",
+    "diccionarip = {\n",
+    "    \"nombre\": \"Jefferson\"\n",
+    "}\n",
+    "if ('Jefferson'):\n",
+    "    #todo lo que vayamos a escribir va a estar dentro de if \n",
+    "    #\n",
+    "    print('Truty')\n",
+    "else:\n",
+    "    #continuamos el codigo\n",
+    "    print ('Falsy')\n",
+    "if (''):\n",
+    "    print('Truty')\n",
+    "else:\n",
+    "    print('Falsy')\n"
    ]
   },
   {
