--- a/01 - Python/00 - introduccion.ipynb
+++ b/01 - Python/00 - introduccion.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,6 @@
     "decimales = 1.1\n",
     "string = \"Jefferson\"\n",
     "segundo_nombre = \"Paul\" # no se debe utilizar camel case \"segundoNombre\" para el nombrado del proyecto no debe empezar con numeros\n",
-    "apellido \"Collantes\"\n",
     "casado = False \n",
     "estudiante = True \n",
     "hijos = None\n",
@@ -126,26 +125,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'decimales' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-d795a0f5f98f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mentero\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdecimales\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mentero\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhijos\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mentero\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcasado\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mentero\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnombre\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mentero\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'decimales' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "Paul\n"
      ]
     }
    ],
    "source": [
+    "print (entero)\n",
     "entero = decimales\n",
     "entero = hijos \n",
     "entero = casado\n",
-    "entero = nombre\n",
+    "entero = segundo_nombre\n",
     "print (entero)"
    ]
   },
