hasta truty y falsy

--- a/01 - Python/00 - introduccion.ipynb
+++ b/01 - Python/00 - introduccion.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,19 @@
      "output_type": "stream",
      "text": [
       "Truty\n",
-      "Falsy\n"
+      "Falsy\n",
+      "Falsy\n",
+      "Truty\n",
+      "Falsy\n",
+      "Truty\n",
+      "Truty\n",
+      "Truty\n",
+      "Falsy\n",
+      "Truty\n",
+      "Falsy\n",
+      "Truty\n",
+      "Falsy\n",
+      "Truty\n"
      ]
     }
    ],
@@ -165,7 +177,7 @@
     "# Truty - Flasy \n",
     "tuplas = (1,2,3) #Arreglos que no se pueden modificar\n",
     "listas = [4,5,6] #arreglo que se pueden modoficar \n",
-    "diccionarip = {\n",
+    "diccionario = {\n",
     "    \"nombre\": \"Jefferson\"\n",
     "}\n",
     "if ('Jefferson'):\n",
@@ -178,7 +190,72 @@
     "if (''):\n",
     "    print('Truty')\n",
     "else:\n",
-    "    print('Falsy')\n"
+    "    print('Falsy')\n",
+    "    \n",
+    "    \n",
+    "noulo = None\n",
+    "if (noulo):\n",
+    "     print('Truty')\n",
+    "else:\n",
+    "    print('Falsy')\n",
+    "    \n",
+    "if (1):\n",
+    "     print('Truty')\n",
+    "else:\n",
+    "    print('Falsy')\n",
+    "if (0):\n",
+    "     print('Truty')\n",
+    "else:\n",
+    "    print('Falsy')\n",
+    "if (-1):\n",
+    "     print('Truty')\n",
+    "else:\n",
+    "    print('Falsy')\n",
+    "if (1.2):\n",
+    "     print('Truty')\n",
+    "else:\n",
+    "    print('Falsy')\n",
+    "if (-1.2):\n",
+    "     print('Truty')\n",
+    "else:\n",
+    "    print('Falsy')\n",
+    "    \n",
+    "if (()):    \n",
+    "     print('Truty')\n",
+    "else:\n",
+    "    print('Falsy')\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "if ((1,2,3)):    \n",
+    "     print('Truty')\n",
+    "else:\n",
+    "    print('Falsy')\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "if ([]):\n",
+    "     print('Truty')\n",
+    "else:\n",
+    "    print('Falsy')\n",
+    "if ([1,2,3]):\n",
+    "     print('Truty')\n",
+    "else:\n",
+    "    print('Falsy')\n",
+    "    \n",
+    "    \n",
+    "if ({}):\n",
+    "     print('Truty')\n",
+    "else:\n",
+    "    print('Falsy')\n",
+    "    \n",
+    "    \n",
+    "if ({string:\"Jefferson\"}):\n",
+    "     print('Truty')\n",
+    "else:\n",
+    "    print('Falsy')\n",
+    "    "
    ]
   },
   {
