hasta truty falsy

--- a/01 - Python/00 - introduccion.ipynb
+++ b/01 - Python/00 - introduccion.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -250,8 +250,8 @@
     "else:\n",
     "    print('Falsy')\n",
     "    \n",
-    "    \n",
-    "if ({string:\"Jefferson\"}):\n",
+    "nombre = \"nombre\" \n",
+    "if ({nombre:\"Jefferson\"}):\n",
     "     print('Truty')\n",
     "else:\n",
     "    print('Falsy')\n",
