--- a/01 - Python/00 - introduccion.ipynb
+++ b/01 - Python/00 - introduccion.ipynb
@@ -198,7 +198,7 @@
     "     print('Truty')\n",
     "else:\n",
     "    print('Falsy')\n",
-    "    \n",
+    "# Numeros entero positivos y negativos, numeros decimales    \n",
     "if (1):\n",
     "     print('Truty')\n",
     "else:\n",
@@ -220,21 +220,18 @@
     "else:\n",
     "    print('Falsy')\n",
     "    \n",
+    "#Tupla \n",
     "if (()):    \n",
     "     print('Truty')\n",
     "else:\n",
     "    print('Falsy')\n",
-    "    \n",
-    "    \n",
     "    \n",
     "if ((1,2,3)):    \n",
     "     print('Truty')\n",
     "else:\n",
     "    print('Falsy')\n",
     "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "# Lista   \n",
     "if ([]):\n",
     "     print('Truty')\n",
     "else:\n",
@@ -244,7 +241,7 @@
     "else:\n",
     "    print('Falsy')\n",
     "    \n",
-    "    \n",
+    "# Diccionarios \n",
     "if ({}):\n",
     "     print('Truty')\n",
     "else:\n",
@@ -255,7 +252,213 @@
     "     print('Truty')\n",
     "else:\n",
     "    print('Falsy')\n",
+    "    \n",
+    "    \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arreglo = [1,2,3,4,5,6,7,8,9,10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arreglo[0:3] #[0,3[\n",
+    "arreglo[5:]  #Hasta el final \n",
+    "arreglo[:7]  #Desde el principio hasta la posicion 7\n",
+    "arreglo[-1]  #elegira la ultima posicion\n",
+    "arreglo[-10] #Indice negativo empieza desde el final \n",
+    "arreglo[3:-2]\n",
+    "arreglo[-8:8]#Desde el tres al 8\n",
+    "arreglo[-4:-1]\n",
+    "arreglo[-7:]\n",
+    "arreglo[:-3]\n",
+    "arreglo[:] #Cogera toda la lista \n",
+    "\n",
+    "arregloTupla = (1,2,3,4,5,6,7,8,9,10)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arreglo[5:9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Collantes'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diccionario = {\n",
+    "    \"nombre\": \"Jefferson\",\n",
+    "    \"apellido\": \"Collantes\",\n",
+    "    \"sueldo\": 0\n",
+    "}\n",
+    "diccionario[\"apellido\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10 in arreglo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (type (5 in arreglo))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(arregloTupla)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len (diccionario)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len (arreglo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"nombre\" in diccionario # para diccionarios se debe escribir la llave a buscar"
    ]
   },
   {
