--- a/01 - Python/00 - introduccion.ipynb
+++ b/01 - Python/00 - introduccion.ipynb
@@ -463,6 +463,303 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#arregloTupla[0] = 2 #En tuplas no se puede modifcar \n",
+    "arreglo[0]=2 # En una lista si podremos cambiar el contenido "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arreglo[:]\n",
+    "#arregl.pop\n",
+    "#arreglo.append\n",
+    "#arreglo.insert"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nombre\n",
+      "apellido\n",
+      "sueldo\n"
+     ]
+    }
+   ],
+   "source": [
+    "#for numeroLista in arreglo:\n",
+    "#for numeroLista in arregloTupla:\n",
+    "for numeroLista in diccionario:\n",
+    "    print(numeroLista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "contador =0 \n",
+    "while contador < 10:\n",
+    "    print (contador)\n",
+    "    contador += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# No se debe utilizar este tipo de sintaxis\n",
+    "jefferson ={\n",
+    "    True: \"Jefferson\",\n",
+    "    False: \"Collantes\",\n",
+    "    1: 12.2,\n",
+    "    'edad': 22,\n",
+    "    \"mascotas\": [{\"nombre\":\"cachetes\"}],\n",
+    "    None:None\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Collantes'"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jefferson [False]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jefferson['edad'] = 19\n",
+    "jefferson[\"mascotas\"][0][\"nombre\"] = \"Panfa\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{True: 12.2,\n",
+       " False: 'Collantes',\n",
+       " 'edad': 19,\n",
+       " 'mascotas': [{'nombre': 'Panfa'}],\n",
+       " None: None}"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jefferson"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys([True, False, 'edad', 'mascotas', None])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jefferson.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([12.2, 'Collantes', 19, [{'nombre': 'Panfa'}], None])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jefferson.values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict_keys'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (type (jefferson.keys()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict_values'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (type (jefferson.values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "edad\n",
+      "mascotas\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "for llave in jefferson.keys():\n",
+    "    print(llave)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.2\n",
+      "Collantes\n",
+      "19\n",
+      "[{'nombre': 'Panfa'}]\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "for valor in jefferson.values():\n",
+    "    print(valor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 == 1 or 2 == 2\n",
+    "1 != 1 and 2 != 2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
