--- a/01 - Python/04 - clases.ipynb
+++ b/01 - Python/04 - clases.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
       "Empezo Constructor\n",
       "Rojo\n",
       "140.39999999999998\n",
-      "Colo: Rojo\n",
+      "Color: Rojo\n",
       "Numero de Chasis: 120\n"
      ]
     }
