--- a/Deberes/CRUD.ipynb
+++ b/Deberes/CRUD.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,13 @@
       "4 Eliminar un auto \n",
       "5 Salir2\n",
       "Bienvenido al consecionario Autoland\n",
-      "Ingrese el numero de la opcion que desea realizar\n"
+      "Ingrese el numero de la opcion que desea realizar\n",
+      "1 Ingresar un nuevo auto \n",
+      "2 Listar autos \n",
+      "3 Actualizar un Auto \n",
+      "4 Eliminar un auto \n",
+      "5 Salir5\n",
+      "Adios\n"
      ]
     }
    ],
