--- a/01 - Python/03 - archivos.ipynb
+++ b/01 - Python/03 - archivos.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Buenos dias mi perro ']\n"
+      "['Buenas Tardes Buenas Tardes amigoBuenas Tardes amigoBuenas Tardes amigo']\n",
+      "<class 'list'>\n"
      ]
     }
    ],
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
