--- a/Deberes/CRUD.ipynb
+++ b/Deberes/CRUD.ipynb
@@ -20,38 +20,39 @@
     "        self.precio = precio\n",
     "        self.transmision = transmision\n",
     "    def __str__(self):\n",
-    "        return f\"Marca: {self.marca} Tipo: {self.tipo} Año: {self.anio} Precio:{self.precio} Transmision: {self.transmision}\"\n",
+    "        return f\"La marca del auto es: {self.marca} Tipo: {self.tipo} Año: {self.anio} Precio:{self.precio} Transmision: {self.transmision}\"\n",
     "\n",
     "    \n",
     "def agregar_auto():\n",
-    "        #autos = []\n",
-    "        marca = input(\"Ingrese la marca del auto\").upper()\n",
-    "        tipo = input (\"Ingrese el tipo de auto Ej: Camioneta, Deportivo, Sedan\").upper()\n",
+    "        marca = input(\"Ingrese la marca del auto con su serie \").upper()\n",
+    "        tipo = input (\"Ingrese el tipo de auto ( Ej: Camioneta, Deportivo, Sedan) \").upper()\n",
     "        anio = input(\"Ingrese el año del auto \")\n",
     "        precio = input(\"Ingrese el precio del auto \")\n",
     "        transmision = input(\"Ingrese que transmision posee el auto Ej: Automatica o Manual \").upper()\n",
     "        autos.append(Auto(marca,tipo, anio, precio,transmision))\n",
+    "        print(\"Vehiculo ingresado con exito\")\n",
     "        \n",
     "def actualizar_auto():\n",
     "    marca=input(\"Ingresen la marca del auto que va a modificar \").upper()\n",
-    "    estado=False\n",
+    "    existe = False\n",
     "    for i in autos:\n",
     "        if(marca == i.marca):\n",
     "            autos.remove(i)\n",
     "            agregar_auto()\n",
-    "            estado=True\n",
+    "            existe = True\n",
     "            break\n",
-    "    if(not estado):\n",
+    "    if(not existe):\n",
     "        print(\"No existe el elemento\")\n",
+    "\n",
     "def eliminar_auto():\n",
     "    marca=input(\"Ingresen la marca del auto que va a \\\"Eliminar\\\" \").upper()\n",
-    "    estado=False\n",
+    "    existe = False\n",
     "    for i in autos:\n",
     "        if(marca== i.marca):\n",
     "            autos.remove(i)\n",
-    "            estado=True\n",
+    "            existe = True\n",
     "            break\n",
-    "    if(not estado):\n",
+    "    if(not existe):\n",
     "        print(\"No existe la Marca\")\n",
     "\n",
     "        \n",
@@ -61,7 +62,7 @@
     "        archivo_abierto = open(path, 'w') # w -> write\n",
     "        guardar=\"\"\n",
     "        for auto_new in autos:\n",
-    "            guardar +=auto_new.marca+\"||\"+auto_new.tipo+\"||\"+auto_new.anio+\"||\"+auto_new.precio+\"||\"+auto_new.transmision+\"||\"+\"\\n\"\n",
+    "            guardar +=auto_new.marca+\",\"+auto_new.tipo+\",\"+auto_new.anio+\",\"+auto_new.precio+\",\"+auto_new.transmision\n",
     "        archivo_abierto.write(guardar)\n",
     "        archivo_abierto.close()\n",
     "    except Exception as Error:\n",
@@ -69,6 +70,8 @@
     "def imprimir_autos():\n",
     "    for listar_autos in autos:\n",
     "        print(listar_autos)\n",
+    "        \n",
+    "\n",
     "        \n"
    ]
   },
@@ -76,65 +79,239 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Partes:\n",
+    "    hp = None\n",
+    "    cilindraje = None\n",
+    "    version = None \n",
+    "    tipo_motor = None\n",
+    "    refrigeracion = None \n",
+    "    numero_de_marchas = None\n",
+    "    def __init__(self,nombre,hp, cilindraje,version,tipo_motor,refrigeracion,numero_de_marchas):\n",
+    "        self.nombre = nombre\n",
+    "        self.hp = hp\n",
+    "        self.cilindraje = cilindraje\n",
+    "        self.version = version\n",
+    "        self.tipo_motor = tipo_motor\n",
+    "        self.refrigeracion = refrigeracion\n",
+    "        self.numero_de_marchas = numero_de_marchas\n",
+    "    def __str__(self):\n",
+    "        return f\"Nombre del Auto:{self.nombre} Horse Power: {self.hp} Cilindraje: {self.cilindraje} Version: {self.version} Tipo Motor: {self.tipo_motor} Refrigeracion: {self.refrigeracion} Numero Marchas: {self.numero_de_marchas}\"\n",
+    "\n",
+    "    \n",
+    "def agregar_partes():\n",
+    "        nombre = str(input(\"Ingrese el nombre del auto al que desea especificar las partes\")).upper()\n",
+    "        for buscar in autos:\n",
+    "            if (buscar.marca == nombre):\n",
+    "                hp = input(\"Ingrese el horse power del vehiculo \")\n",
+    "                cilindraje = input (\"Ingrese el cilindraje \")\n",
+    "                version = input(\"Ingrese la version del auto \").upper()\n",
+    "                tipo_motor = input(\"Ingrese el tipo de motor \")\n",
+    "                refrigeracion = input(\"Ingrese la refrigeracion Ej: Naturalmente Aspirada , Turbo\").upper()\n",
+    "                numero_de_marchas = input(\"Ingrese el numero de marchas del auto \")\n",
+    "                partes.append(Partes(nombre,hp, cilindraje,version,tipo_motor,refrigeracion,numero_de_marchas))\n",
+    "            else:\n",
+    "                print(\"No existe un registro del auto ingresado\")\n",
+    "        \n",
+    "        \n",
+    "def actualizar_partes():\n",
+    "    nombre=input(\"Ingresen el nombre del auto que va a modificar las partes \").upper()\n",
+    "    existe=False\n",
+    "    for i in partes:\n",
+    "        if(nombre == i.nombre):\n",
+    "            partes.remove(i)\n",
+    "            agregar_partes()\n",
+    "            existe=True\n",
+    "            break\n",
+    "    if(not existe):\n",
+    "        print(\"No existe el auto que se desea modificar\")\n",
+    "def eliminar_partes():\n",
+    "    nombre=input(\"Ingresen la marca del auto que va a \\\"Eliminar\\\" \").upper()\n",
+    "    existe=False\n",
+    "    for i in partes:\n",
+    "        if(nombre== i.nombre):\n",
+    "            partes.remove(i)\n",
+    "            existe=True\n",
+    "            break\n",
+    "    if(not existe):\n",
+    "        print(\"No existe el auto\")\n",
+    "\n",
+    "        \n",
+    "def guardarPartes():\n",
+    "    try: \n",
+    "        path = \"./partes.txt\"\n",
+    "        archivo_abierto = open(path, 'w') # w -> write\n",
+    "        guardar=\"\"\n",
+    "        for partes_new in partes:\n",
+    "            guardar +=partes_new.nombre+\",\"+partes_new.hp+\",\"+partes_new.cilindraje+\",\"+partes_new.version+\",\"+partes_new.tipo_motor+\",\"+partes_new.numero_de_marchas\n",
+    "        archivo_abierto.write(guardar)\n",
+    "        archivo_abierto.close()\n",
+    "    except Exception as Error:\n",
+    "        print(\"Error al guardar las partes\")\n",
+    "\n",
+    "def imprimir_partes():\n",
+    "    for listar_partes in partes:\n",
+    "        print(listar_partes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bienvenido al consecionario Autoland\n",
+      "****Bienvenido al consecionario Autoland****\n",
       "Ingrese el numero de la opcion que desea realizar\n",
       "1 Ingresar un nuevo auto \n",
       "2 Listar autos \n",
       "3 Actualizar un Auto \n",
       "4 Eliminar un auto \n",
-      "5 Salir1\n",
+      "5 Ingresar las partes de un auto \n",
+      "6 Listar partes \n",
+      "7 Actualizar Partes \n",
+      "8 Eliminar Partes \n",
+      "9 Salir1\n",
       "Ha seleccionado agergar un Auto\n",
-      "Ingrese la marca del autoFORD\n",
-      "Ingrese el tipo de auto Ej: Camioneta, Deportivo, SedanCAMIONETA \n",
+      "Ingrese la marca del auto con su serie mazda bt-50\n",
+      "Ingrese el tipo de auto ( Ej: Camioneta, Deportivo, Sedan) Sedan\n",
       "Ingrese el año del auto 2020\n",
-      "Ingrese el precio del auto 36.000\n",
-      "Ingrese que transmision posee el auto Ej: Automatica o Manual AUTOMATICA\n",
-      "Bienvenido al consecionario Autoland\n",
+      "Ingrese el precio del auto 36.500\n",
+      "Ingrese que transmision posee el auto Ej: Automatica o Manual Manual\n",
+      "Vehiculo ingresado con exito\n",
+      "****Bienvenido al consecionario Autoland****\n",
       "Ingrese el numero de la opcion que desea realizar\n",
       "1 Ingresar un nuevo auto \n",
       "2 Listar autos \n",
       "3 Actualizar un Auto \n",
       "4 Eliminar un auto \n",
-      "5 Salir2\n",
-      "Marca: FORD Tipo: CAMIONETA  Año: 2020 Precio:36.000 Transmision: AUTOMATICA\n",
-      "Bienvenido al consecionario Autoland\n",
+      "5 Ingresar las partes de un auto \n",
+      "6 Listar partes \n",
+      "7 Actualizar Partes \n",
+      "8 Eliminar Partes \n",
+      "9 Salir2\n",
+      "La marca del auto es: MAZDA BT-50 Tipo: SEDAN Año: 2020 Precio:36.500 Transmision: MANUAL\n",
+      "****Bienvenido al consecionario Autoland****\n",
       "Ingrese el numero de la opcion que desea realizar\n",
       "1 Ingresar un nuevo auto \n",
       "2 Listar autos \n",
       "3 Actualizar un Auto \n",
       "4 Eliminar un auto \n",
-      "5 Salir4\n",
-      "Marca: FORD Tipo: CAMIONETA  Año: 2020 Precio:36.000 Transmision: AUTOMATICA\n",
-      "Ingresen la marca del auto que va a \"Eliminar\" FORD\n",
-      "Bienvenido al consecionario Autoland\n",
+      "5 Ingresar las partes de un auto \n",
+      "6 Listar partes \n",
+      "7 Actualizar Partes \n",
+      "8 Eliminar Partes \n",
+      "9 Salir3\n",
+      "La marca del auto es: MAZDA BT-50 Tipo: SEDAN Año: 2020 Precio:36.500 Transmision: MANUAL\n",
+      "Ingresen la marca del auto que va a modificar MAZDA BT-50\n",
+      "Ingrese la marca del auto con su serie MAZDA BT-50\n",
+      "Ingrese el tipo de auto ( Ej: Camioneta, Deportivo, Sedan) Camioneta\n",
+      "Ingrese el año del auto 2020\n",
+      "Ingrese el precio del auto 37.800\n",
+      "Ingrese que transmision posee el auto Ej: Automatica o Manual Manual\n",
+      "Vehiculo ingresado con exito\n",
+      "****Bienvenido al consecionario Autoland****\n",
       "Ingrese el numero de la opcion que desea realizar\n",
       "1 Ingresar un nuevo auto \n",
       "2 Listar autos \n",
       "3 Actualizar un Auto \n",
       "4 Eliminar un auto \n",
-      "5 Salir2\n",
-      "Bienvenido al consecionario Autoland\n",
+      "5 Ingresar las partes de un auto \n",
+      "6 Listar partes \n",
+      "7 Actualizar Partes \n",
+      "8 Eliminar Partes \n",
+      "9 Salir2\n",
+      "La marca del auto es: MAZDA BT-50 Tipo: CAMIONETA Año: 2020 Precio:37.800 Transmision: MANUAL\n",
+      "****Bienvenido al consecionario Autoland****\n",
       "Ingrese el numero de la opcion que desea realizar\n",
       "1 Ingresar un nuevo auto \n",
       "2 Listar autos \n",
       "3 Actualizar un Auto \n",
       "4 Eliminar un auto \n",
-      "5 Salir5\n",
-      "Adios\n"
+      "5 Ingresar las partes de un auto \n",
+      "6 Listar partes \n",
+      "7 Actualizar Partes \n",
+      "8 Eliminar Partes \n",
+      "9 Salir5\n",
+      "Ingrese el nombre del auto al que desea especificar las partesMAZDA BT-50\n",
+      "Ingrese el horse power del vehiculo 300\n",
+      "Ingrese el cilindraje 3.6\n",
+      "Ingrese la version del auto Full\n",
+      "Ingrese el tipo de motor v6\n",
+      "Ingrese la refrigeracion Ej: Naturalmente Aspirada , TurboTurbo\n",
+      "Ingrese el numero de marchas del auto 5\n",
+      "****Bienvenido al consecionario Autoland****\n",
+      "Ingrese el numero de la opcion que desea realizar\n",
+      "1 Ingresar un nuevo auto \n",
+      "2 Listar autos \n",
+      "3 Actualizar un Auto \n",
+      "4 Eliminar un auto \n",
+      "5 Ingresar las partes de un auto \n",
+      "6 Listar partes \n",
+      "7 Actualizar Partes \n",
+      "8 Eliminar Partes \n",
+      "9 Salir6\n",
+      "Nombre del Auto:MAZDA BT-50 Horse power: 300 Cilindraje: 3.6 Version: FULL Tipo Motor: v6 Refrigeracion: TURBO Numero Marchas: 5\n",
+      "****Bienvenido al consecionario Autoland****\n",
+      "Ingrese el numero de la opcion que desea realizar\n",
+      "1 Ingresar un nuevo auto \n",
+      "2 Listar autos \n",
+      "3 Actualizar un Auto \n",
+      "4 Eliminar un auto \n",
+      "5 Ingresar las partes de un auto \n",
+      "6 Listar partes \n",
+      "7 Actualizar Partes \n",
+      "8 Eliminar Partes \n",
+      "9 Salir8\n",
+      "Ingresen la marca del auto que va a \"Eliminar\" MAZDA BT-50\n",
+      "****Bienvenido al consecionario Autoland****\n",
+      "Ingrese el numero de la opcion que desea realizar\n",
+      "1 Ingresar un nuevo auto \n",
+      "2 Listar autos \n",
+      "3 Actualizar un Auto \n",
+      "4 Eliminar un auto \n",
+      "5 Ingresar las partes de un auto \n",
+      "6 Listar partes \n",
+      "7 Actualizar Partes \n",
+      "8 Eliminar Partes \n",
+      "9 Salir6\n",
+      "****Bienvenido al consecionario Autoland****\n",
+      "Ingrese el numero de la opcion que desea realizar\n",
+      "1 Ingresar un nuevo auto \n",
+      "2 Listar autos \n",
+      "3 Actualizar un Auto \n",
+      "4 Eliminar un auto \n",
+      "5 Ingresar las partes de un auto \n",
+      "6 Listar partes \n",
+      "7 Actualizar Partes \n",
+      "8 Eliminar Partes \n",
+      "9 Salir2\n",
+      "La marca del auto es: MAZDA BT-50 Tipo: CAMIONETA Año: 2020 Precio:37.800 Transmision: MANUAL\n",
+      "****Bienvenido al consecionario Autoland****\n",
+      "Ingrese el numero de la opcion que desea realizar\n",
+      "1 Ingresar un nuevo auto \n",
+      "2 Listar autos \n",
+      "3 Actualizar un Auto \n",
+      "4 Eliminar un auto \n",
+      "5 Ingresar las partes de un auto \n",
+      "6 Listar partes \n",
+      "7 Actualizar Partes \n",
+      "8 Eliminar Partes \n",
+      "9 Salir9\n",
+      "*******Adios*******\n"
      ]
     }
    ],
    "source": [
-    "autos=[]\n",
+    "autos = []\n",
+    "partes = []\n",
     "while True:\n",
-    "    print(\"Bienvenido al consecionario Autoland\")\n",
+    "    print(\"****Bienvenido al consecionario Autoland****\")\n",
     "    print(\"Ingrese el numero de la opcion que desea realizar\")\n",
-    "    opciones = str(input (\"1 Ingresar un nuevo auto \\n2 Listar autos \\n3 Actualizar un Auto \\n4 Eliminar un auto \\n5 Salir\"))\n",
+    "    opciones = str(input (\"1 Ingresar un nuevo auto \\n2 Listar autos \\n3 Actualizar un Auto \\n4 Eliminar un auto \\n5 Ingresar las partes de un auto \\n6 Listar partes \\n7 Actualizar Partes \\n8 Eliminar Partes \\n9 Salir\"))\n",
     "    if opciones == \"1\":\n",
     "        print (\"Ha seleccionado agergar un Auto\") \n",
     "        agregar_auto()\n",
@@ -149,30 +326,71 @@
     "        imprimir_autos()\n",
     "        eliminar_auto()\n",
     "    elif opciones==\"5\":\n",
-    "        print(\"Adios\")\n",
+    "        agregar_partes()\n",
+    "        guardarPartes()\n",
+    "    elif opciones == \"6\":\n",
+    "        imprimir_partes()\n",
+    "    elif opciones == \"7\":\n",
+    "        imprimir_partes()\n",
+    "        actualizar_partes()\n",
+    "    elif opciones == \"8\":\n",
+    "        eliminar_partes()\n",
+    "    elif opciones==\"9\":\n",
+    "        print(\"*******Adios*******\")\n",
     "        break\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['MAZDA BT-50,300,3.6,FULL,v6,v6,5']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def leerPartes():\n",
+    "    try:\n",
+    "        path = \"./partes.txt\"\n",
+    "        archivo_abierto = open(path, 'r')\n",
+    "        lineas = archivo_abierto.readlines()\n",
+    "        print(lineas)\n",
+    "        archivo_abierto.close()\n",
+    "    except Exception as Error:\n",
+    "        print(\"Error leyendos archivo\")\n",
+    "leerPartes()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['MAZDA BT-50,CAMIONETA,2020,37.800,MANUAL']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def leerAutos():\n",
+    "    try:\n",
+    "        path = \"./autosNuevo.txt\"\n",
+    "        archivo_abierto = open(path, 'r')\n",
+    "        lineas = archivo_abierto.readlines()\n",
+    "        print(lineas)\n",
+    "        archivo_abierto.close()\n",
+    "    except Exception as Error:\n",
+    "        print(\"Error leyendos archivo\")\n",
+    "leerAutos()"
+   ]
   },
   {
    "cell_type": "code",
