--- a/Deberes/CRUD.ipynb
+++ b/Deberes/CRUD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
     "def guardarAuto():\n",
     "    try: \n",
     "        path = \"./autosNuevo.txt\"\n",
-    "        archivo_abierto = open(path, 'w') # w -> write\n",
+    "        archivo_abierto = open(path, 'w') \n",
     "        guardar=\"\"\n",
     "        for auto_new in autos:\n",
     "            guardar +=auto_new.marca+\",\"+auto_new.tipo+\",\"+auto_new.anio+\",\"+auto_new.precio+\",\"+auto_new.transmision\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
     "def guardarPartes():\n",
     "    try: \n",
     "        path = \"./partes.txt\"\n",
-    "        archivo_abierto = open(path, 'w') # w -> write\n",
+    "        archivo_abierto = open(path, 'w') \n",
     "        guardar=\"\"\n",
     "        for partes_new in partes:\n",
     "            guardar +=partes_new.nombre+\",\"+partes_new.hp+\",\"+partes_new.cilindraje+\",\"+partes_new.version+\",\"+partes_new.tipo_motor+\",\"+partes_new.numero_de_marchas\n",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -176,55 +176,12 @@
       "8 Eliminar Partes \n",
       "9 Salir1\n",
       "Ha seleccionado agergar un Auto\n",
-      "Ingrese la marca del auto con su serie mazda bt-50\n",
-      "Ingrese el tipo de auto ( Ej: Camioneta, Deportivo, Sedan) Sedan\n",
-      "Ingrese el año del auto 2020\n",
-      "Ingrese el precio del auto 36.500\n",
-      "Ingrese que transmision posee el auto Ej: Automatica o Manual Manual\n",
-      "Vehiculo ingresado con exito\n",
-      "****Bienvenido al consecionario Autoland****\n",
-      "Ingrese el numero de la opcion que desea realizar\n",
-      "1 Ingresar un nuevo auto \n",
-      "2 Listar autos \n",
-      "3 Actualizar un Auto \n",
-      "4 Eliminar un auto \n",
-      "5 Ingresar las partes de un auto \n",
-      "6 Listar partes \n",
-      "7 Actualizar Partes \n",
-      "8 Eliminar Partes \n",
-      "9 Salir2\n",
-      "La marca del auto es: MAZDA BT-50 Tipo: SEDAN Año: 2020 Precio:36.500 Transmision: MANUAL\n",
-      "****Bienvenido al consecionario Autoland****\n",
-      "Ingrese el numero de la opcion que desea realizar\n",
-      "1 Ingresar un nuevo auto \n",
-      "2 Listar autos \n",
-      "3 Actualizar un Auto \n",
-      "4 Eliminar un auto \n",
-      "5 Ingresar las partes de un auto \n",
-      "6 Listar partes \n",
-      "7 Actualizar Partes \n",
-      "8 Eliminar Partes \n",
-      "9 Salir3\n",
-      "La marca del auto es: MAZDA BT-50 Tipo: SEDAN Año: 2020 Precio:36.500 Transmision: MANUAL\n",
-      "Ingresen la marca del auto que va a modificar MAZDA BT-50\n",
-      "Ingrese la marca del auto con su serie MAZDA BT-50\n",
+      "Ingrese la marca del auto con su serie Ford\n",
       "Ingrese el tipo de auto ( Ej: Camioneta, Deportivo, Sedan) Camioneta\n",
       "Ingrese el año del auto 2020\n",
-      "Ingrese el precio del auto 37.800\n",
+      "Ingrese el precio del auto 36.000\n",
       "Ingrese que transmision posee el auto Ej: Automatica o Manual Manual\n",
       "Vehiculo ingresado con exito\n",
-      "****Bienvenido al consecionario Autoland****\n",
-      "Ingrese el numero de la opcion que desea realizar\n",
-      "1 Ingresar un nuevo auto \n",
-      "2 Listar autos \n",
-      "3 Actualizar un Auto \n",
-      "4 Eliminar un auto \n",
-      "5 Ingresar las partes de un auto \n",
-      "6 Listar partes \n",
-      "7 Actualizar Partes \n",
-      "8 Eliminar Partes \n",
-      "9 Salir2\n",
-      "La marca del auto es: MAZDA BT-50 Tipo: CAMIONETA Año: 2020 Precio:37.800 Transmision: MANUAL\n",
       "****Bienvenido al consecionario Autoland****\n",
       "Ingrese el numero de la opcion que desea realizar\n",
       "1 Ingresar un nuevo auto \n",
@@ -236,48 +193,13 @@
       "7 Actualizar Partes \n",
       "8 Eliminar Partes \n",
       "9 Salir5\n",
-      "Ingrese el nombre del auto al que desea especificar las partesMAZDA BT-50\n",
+      "Ingrese el nombre del auto al que desea especificar las partesford\n",
       "Ingrese el horse power del vehiculo 300\n",
-      "Ingrese el cilindraje 3.6\n",
+      "Ingrese el cilindraje 3.2\n",
       "Ingrese la version del auto Full\n",
-      "Ingrese el tipo de motor v6\n",
+      "Ingrese el tipo de motor V6\n",
       "Ingrese la refrigeracion Ej: Naturalmente Aspirada , TurboTurbo\n",
-      "Ingrese el numero de marchas del auto 5\n",
-      "****Bienvenido al consecionario Autoland****\n",
-      "Ingrese el numero de la opcion que desea realizar\n",
-      "1 Ingresar un nuevo auto \n",
-      "2 Listar autos \n",
-      "3 Actualizar un Auto \n",
-      "4 Eliminar un auto \n",
-      "5 Ingresar las partes de un auto \n",
-      "6 Listar partes \n",
-      "7 Actualizar Partes \n",
-      "8 Eliminar Partes \n",
-      "9 Salir6\n",
-      "Nombre del Auto:MAZDA BT-50 Horse power: 300 Cilindraje: 3.6 Version: FULL Tipo Motor: v6 Refrigeracion: TURBO Numero Marchas: 5\n",
-      "****Bienvenido al consecionario Autoland****\n",
-      "Ingrese el numero de la opcion que desea realizar\n",
-      "1 Ingresar un nuevo auto \n",
-      "2 Listar autos \n",
-      "3 Actualizar un Auto \n",
-      "4 Eliminar un auto \n",
-      "5 Ingresar las partes de un auto \n",
-      "6 Listar partes \n",
-      "7 Actualizar Partes \n",
-      "8 Eliminar Partes \n",
-      "9 Salir8\n",
-      "Ingresen la marca del auto que va a \"Eliminar\" MAZDA BT-50\n",
-      "****Bienvenido al consecionario Autoland****\n",
-      "Ingrese el numero de la opcion que desea realizar\n",
-      "1 Ingresar un nuevo auto \n",
-      "2 Listar autos \n",
-      "3 Actualizar un Auto \n",
-      "4 Eliminar un auto \n",
-      "5 Ingresar las partes de un auto \n",
-      "6 Listar partes \n",
-      "7 Actualizar Partes \n",
-      "8 Eliminar Partes \n",
-      "9 Salir6\n",
+      "Ingrese el numero de marchas del auto ford\n",
       "****Bienvenido al consecionario Autoland****\n",
       "Ingrese el numero de la opcion que desea realizar\n",
       "1 Ingresar un nuevo auto \n",
@@ -289,7 +211,7 @@
       "7 Actualizar Partes \n",
       "8 Eliminar Partes \n",
       "9 Salir2\n",
-      "La marca del auto es: MAZDA BT-50 Tipo: CAMIONETA Año: 2020 Precio:37.800 Transmision: MANUAL\n",
+      "La marca del auto es: FORD Tipo: CAMIONETA Año: 2020 Precio:36.000 Transmision: MANUAL\n",
       "****Bienvenido al consecionario Autoland****\n",
       "Ingrese el numero de la opcion que desea realizar\n",
       "1 Ingresar un nuevo auto \n",
@@ -300,8 +222,42 @@
       "6 Listar partes \n",
       "7 Actualizar Partes \n",
       "8 Eliminar Partes \n",
-      "9 Salir9\n",
-      "*******Adios*******\n"
+      "9 Salir3\n",
+      "La marca del auto es: FORD Tipo: CAMIONETA Año: 2020 Precio:36.000 Transmision: MANUAL\n",
+      "Ingresen la marca del auto que va a modificar ford\n",
+      "Ingrese la marca del auto con su serie Toyota\n",
+      "Ingrese el tipo de auto ( Ej: Camioneta, Deportivo, Sedan) Sedan\n",
+      "Ingrese el año del auto 2015\n",
+      "Ingrese el precio del auto 15.000\n",
+      "Ingrese que transmision posee el auto Ej: Automatica o Manual Manual\n",
+      "Vehiculo ingresado con exito\n",
+      "****Bienvenido al consecionario Autoland****\n",
+      "Ingrese el numero de la opcion que desea realizar\n",
+      "1 Ingresar un nuevo auto \n",
+      "2 Listar autos \n",
+      "3 Actualizar un Auto \n",
+      "4 Eliminar un auto \n",
+      "5 Ingresar las partes de un auto \n",
+      "6 Listar partes \n",
+      "7 Actualizar Partes \n",
+      "8 Eliminar Partes \n",
+      "9 Salir2\n",
+      "La marca del auto es: TOYOTA Tipo: SEDAN Año: 2015 Precio:15.000 Transmision: MANUAL\n",
+      "****Bienvenido al consecionario Autoland****\n",
+      "Ingrese el numero de la opcion que desea realizar\n",
+      "1 Ingresar un nuevo auto \n",
+      "2 Listar autos \n",
+      "3 Actualizar un Auto \n",
+      "4 Eliminar un auto \n",
+      "5 Ingresar las partes de un auto \n",
+      "6 Listar partes \n",
+      "7 Actualizar Partes \n",
+      "8 Eliminar Partes \n",
+      "9 Salir4\n",
+      "La marca del auto es: TOYOTA Tipo: SEDAN Año: 2015 Precio:15.000 Transmision: MANUAL\n",
+      "Ingresen la marca del auto que va a \"Eliminar\" TOYOTA\n",
+      "****Bienvenido al consecionario Autoland****\n",
+      "Ingrese el numero de la opcion que desea realizar\n"
      ]
     }
    ],
@@ -325,6 +281,7 @@
     "    elif opciones==\"4\":\n",
     "        imprimir_autos()\n",
     "        eliminar_auto()\n",
+    "        guardarAuto()\n",
     "    elif opciones==\"5\":\n",
     "        agregar_partes()\n",
     "        guardarPartes()\n",
@@ -334,7 +291,9 @@
     "        imprimir_partes()\n",
     "        actualizar_partes()\n",
     "    elif opciones == \"8\":\n",
+    "        imprimir_partes()\n",
     "        eliminar_partes()\n",
+    "        guardarPartes()\n",
     "    elif opciones==\"9\":\n",
     "        print(\"*******Adios*******\")\n",
     "        break\n"
@@ -375,7 +334,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['MAZDA BT-50,CAMIONETA,2020,37.800,MANUAL']\n"
+      "[]\n"
      ]
     }
    ],
