--- a/Deberes/Deber 2/Puzzle.ipynb
+++ b/Deberes/Deber 2/Puzzle.ipynb
@@ -88,7 +88,7 @@
     "                continue\n",
     "            \n",
     "            if inicial < 0 or inicial > 15 or final < 0 or final > 15:\n",
-    "                self.error = \"Debe ingresar como posicion un numero entre 0 y 15\"\n",
+    "                self.error = \"Ingresar como posicion un numero entre 0 y 15\"\n",
     "            \n",
     "            else:\n",
     "                self.cambiarPiezas(inicial, final)\n",
